# zerok

./: .gitignore  Cargo.toml  DESIGN.md  README.md  deny.toml  fuzz.py  geiger.txt
.github/workflows/: book.yml  ci.yml  fuzz.yml
book/: book.toml
book/src/: SUMMARY.md  intro.md
book/src/cli/: gen-key.md  index.md
book/src/concepts/: capability-model.md  manifest.md  signing.md
book/src/design/: cspace-layout.md  pipeline.md  sel4-mapping.md  spawn-timeline.md
book/src/security/: index.md  limitations.md  threat-model.md
book/src/spec/: audit-log.md  kpkg-header.md
crates/zerok/: .gitignore  Cargo.toml
crates/zerok-core/: Cargo.toml  README.md
crates/zerok-core/src/: lib.rs
crates/zerok-ipc/: Cargo.toml
crates/zerok-ipc/src/: lib.rs
crates/zerok-launcher/: Cargo.toml
crates/zerok-launcher/src/: main.rs
crates/zerok-runner/: Cargo.toml  Makefile
crates/zerok-runner/docker/: Dockerfile  Makefile
crates/zerok-runner/docker/mk/: app.mk
crates/zerok-runner/src/: main.rs
crates/zerok-sel4/: Cargo.toml  LICENSE  Makefile  README.md  build-elf  payload.S  run  rust-toolchain.toml
crates/zerok-sel4/.cargo/: config.toml
crates/zerok-sel4/src/: elf.rs  main.rs
crates/zerok-sel4/target-specs/: README.md
crates/zerok/src/: kpkg.rs  launch.rs  lib.rs  main.rs  run.rs  signature.rs
fuzz/: Cargo.toml
fuzz/fuzz_targets/: fuzz_kpkg_load.rs  fuzz_parse_manifest.rs
src/: audit.rs  inspect.rs  kpkg.rs  lib.rs  main.rs  package.rs  signature.rs
