[package]
name = "zerok"
version = "0.1.0"
edition = "2024"

[dependencies]
toml = "0.8"
serde = { version = "1.0", features = ["derive"] }
clap = { version = "4", features = ["derive"] }
anyhow = "1.0"
ed25519-dalek = { version = "2", features = ["rand_core"] }
rand = { version = "0.8", features = ["std", "std_rng"] }
rand_core = "0.6"
sha2 = "0.10"
ed25519 = "2.2.0"

[dev-dependencies]
tempfile = "3"
proptest = "1"
assert_cmd = "2"
assert_fs = "1"
predicates = "3"
