[package]
name = "zerok"
version = "0.1.0"
edition = "2024"
license = "BSD-3-Clause"

[dependencies]
anyhow = "1.0"

# Keep parse + display (pretty printing).
toml = { version = "0.8", default-features = false, features = ["parse", "display"] }
serde = { version = "1.0", default-features = false, features = ["derive", "std"] }
clap  = { version = "4.5", default-features = false, features = ["derive", "std"] }
# Trimmed:
regex = { version = "1.11", default-features = false, features = ["std", "unicode-case", "unicode-perl"] }
# ELF-only:
#later add Windows PE or Mach-O auditing, remember to re-enable those goblin features.
goblin = { version = "0.10.1", default-features = false, features = ["elf32", "elf64", "std","endian_fd" ] }

[dev-dependencies]
tempfile = "3"
proptest = { version = "1.7", default-features = false, features = [
    "std",
    "timeout",
] }
assert_cmd = "2"
assert_fs = "1"
predicates = "3"
