[package]
name = "zerok-launcher"
version = "0.1.0"
edition = "2021"

[dependencies]
anyhow = "1"
zerok-ipc = { path = "../zerok-ipc" }
rustix = { version = "0.38", default-features = false, features = [
    "fs",      # fsync, open flags, etc.
    "process", # execve
    "param",   # CStr helpers
    "stdio",   # rustix::io::write
] }
