
[package]
name = "zerok-sel4"
version = "0.1.0"
edition = "2024"
license = "BSD-3-Clause"

[dependencies]
sel4 = { git = "https://github.com/seL4/rust-sel4" }
sel4-root-task = { git = "https://github.com/seL4/rust-sel4" }
sel4-logging = { git = "https://github.com/seL4/rust-sel4" }
linked_list_allocator = { version = "0.10", default-features = false, features = [
    "use_spin",
] }
