[package]
name = "zerok"
version = "0.1.0"
edition = "2024"
license = "BSD-3-Clause"

[dependencies]
# Trim toml: only need parsing/serde, not pretty display
toml = { version = "0.8", default-features = false, features = [
    "parse",
    "display",
] }
serde = { version = "1.0", features = ["derive"] }
# Trim clap: turn off unneeded terminal bells & whistles
clap = { version = "4.5", default-features = false, features = [
    "std",
    "derive",
    "help",
    "usage",
    "error-context", # consider dropping "color" for fully headless CI
] }
anyhow = "1.0"
# Use ed25519-dalek without "fast" (still constant-time, just fewer precomputed tables)
ed25519-dalek = { version = "2.2", default-features = false, features = [
    "std",
    "zeroize",
    "rand_core", # omit "fast"
] }
rand = { version = "0.8", features = ["std", "std_rng"] }
rand_core = "0.6"
# sha2 doesn’t need extra features unless you want std
sha2 = { version = "0.10", default-features = false, features = ["std"] }
ed25519 = "2.2.0"

[dev-dependencies]
tempfile = "3"
proptest = { version = "1.7", default-features = false, features = [
    "std",
    "timeout",
] }
assert_cmd = "2"
assert_fs = "1"
predicates = "3"
