[package]
name = "zerok"
version = "0.1.0"
edition = "2024"
license = "BSD-3-Clause"

[dependencies]
toml = { version = "0.8", default-features = false, features = [
    "parse",
    "display",
] }
serde = { version = "1.0", features = ["derive"] }
clap = { version = "4.5", default-features = false, features = [
    "std",
    "derive",
    "help",
    "usage",
    "error-context",
] }
anyhow = "1.0"

[dev-dependencies]
tempfile = "3"
proptest = { version = "1.7", default-features = false, features = [
    "std",
    "timeout",
] }
assert_cmd = "2"
assert_fs = "1"
predicates = "3"
